--- a/portrait.html
+++ b/portrait.html
@@ -1,9 +1,14 @@
 
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-  <script type="text/javascript"> 
+  <script type="text/javascript">
 
    window.addEventListener('load',function() {
     let myAudio = document.getElementById("myaudio");
@@ -11,7 +16,7 @@
    })
    </script>
 
-  <style>
+   <style>
    body {
       display: flex;
       justify-content: center;
@@ -340,7 +345,7 @@
 
         setTimeout(generateBubble, 2000);
       }
-    </script>
+     </script>
     </div>
   </div>
 </body>
