--- a/portrait.html
+++ b/portrait.html
@@ -210,7 +210,7 @@
         fill(255);
         textSize(16);
         textFont("Georgia");
-        text('Click me and drag my clone to generate bubbles', 40, 480);
+        text('Drag my clone to generate bubbles', 40, 480);
 
         fill(myColorRed);
         arc(200, 258, 40, 50, 0, PI);
