--- a/portrait.html
+++ b/portrait.html
@@ -53,7 +53,7 @@
             display: flex;
             flex-direction: column;
             margin: 20px; 
-            top: 40px;
+            top: 10vh;
             left: 79vw;
         }
 
